fix: update vercel.json to exclude sitemap.xml from rewrites  - Add regex to allow direct access to sitemap.xml - All other routes still redirect to index.html for React routing - Enable Google to read sitemap.xml for indexing

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
-
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!sitemap.xml).*)",
       "destination": "/index.html"
     }
   ],
